# exploring-web-frameworks

./: .dockerignore  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  justfile  tier-list.md
generator/: Cargo.toml  Dockerfile  config.json
generator/src/: api.rs  client.rs  config.rs  main.rs  method.rs  operation.rs  payload.rs  provider.rs  randomiser.rs  telemetry.rs  worker.rs
generator/src/methods/: manager.rs  method.rs  mod.rs
generator/src/payloads/: manager.rs  mod.rs  payload.rs
generator/src/settings/: config.rs  json.rs  mod.rs
services/axum/: Cargo.toml  Dockerfile
services/axum/src/: cli.rs  environment.rs  main.rs  router.rs  server.rs  task.rs
services/axum/src/api/handlers/: delete.rs  get.rs  insert.rs  patch.rs  post.rs  put.rs  rpc.rs
services/python/django/: pyproject.toml
services/python/django/src/: application.py  main.py  settings.py  urls.py
services/python/django/src/routes/: apps.py  errors.py
services/python/django/src/routes/handlers/: delete.py  get.py  internal.py  invalid_method.py  invalid_path.py  large_payload.py  patch.py  post.py  put.py
services/python/django/src/routes/middleware/: __init__.py  chaos.py  head.py  log.py
services/python/fastapi/: pyproject.toml
services/python/fastapi/src/: application.py  main.py  server.py
services/python/fastapi/src/routes/: errors.py  router.py
services/python/fastapi/src/routes/handlers/: __init__.py  delete.py  get.py  internal.py  invalid_method.py  invalid_path.py  patch.py  post.py  put.py  validation.py
services/python/fastapi/src/routes/middleware/: __init__.py  body_size.py  chaos.py  log.py
services/python/flask/: pyproject.toml
services/python/flask/src/: app.py  application.py  main.py  server.py  state.py  task.py
services/python/flask/src/routes/: errors.py  router.py
services/python/flask/src/routes/handlers/: __init__.py  delete.py  get.py  internal.py  invalid_method.py  invalid_path.py  large_payload.py  patch.py  post.py  put.py
services/python/flask/src/routes/middleware/: chaos.py  log.py
services/python/quart/: pyproject.toml
services/python/quart/src/: application.py  main.py  server.py
services/python/quart/src/routes/: errors.py
services/python/quart/src/routes/handlers/: delete.py  get.py  internal.py  invalid_method.py  invalid_path.py  large_payload.py  patch.py  post.py  put.py
services/python/quart/src/routes/middleware/: __init__.py  chaos.py  log.py
services/python/starlette/: pyproject.toml
services/python/starlette/src/: application.py  main.py
services/python/starlette/src/routes/: errors.py
services/python/starlette/src/routes/handlers/: __init__.py  delete.py  get.py  internal.py  invalid_method.py  invalid_path.py  patch.py  post.py  put.py
services/python/starlette/src/routes/middleware/: __init__.py  body_size.py  chaos.py  log.py
services/python/tornado/: pyproject.toml
services/python/tornado/src/: application.py  main.py  server.py
services/python/tornado/src/routes/: errors.py
services/python/tornado/src/routes/handlers/: __init__.py  base.py  default.py  multi_method.py  post.py
services/python/tornado/src/routes/hooks/: __init__.py  chaos.py  log.py
services/rust/actix/: Cargo.toml  Dockerfile
services/rust/actix/src/: main.rs  router.rs  server.rs
services/rust/actix/src/api/: errors.rs
services/rust/actix/src/api/handlers/: delete.rs  get.rs  patch.rs  post.rs  put.rs
services/rust/actix/src/api/middleware/: validate_request.rs
services/rust/actix/src/routes/: errors.rs  extractors.rs  mod.rs  router.rs
services/rust/actix/src/routes/handlers/: delete.rs  get.rs  invalid_method.rs  invalid_path.rs  patch.rs  post.rs  put.rs
services/rust/actix/src/routes/middleware/: chaos.rs  log.rs  mod.rs
services/rust/poem/: Cargo.toml  Dockerfile
services/rust/poem/src/: main.rs  router.rs  server.rs  task.rs
services/rust/poem/src/api/: errors.rs
services/rust/poem/src/api/handlers/: delete.rs  get.rs  patch.rs  post.rs  put.rs
services/rust/poem/src/api/middleware/: mod.rs  validate_request.rs
services/rust/poem/src/routes/: errors.rs  extractors.rs  mod.rs  router.rs
services/rust/poem/src/routes/handlers/: delete.rs  get.rs  invalid_method.rs  invalid_path.rs  mod.rs  patch.rs  post.rs  put.rs
services/rust/poem/src/routes/middleware/: chaos.rs  log.rs
services/rust/rocket/: Cargo.toml  Dockerfile
services/rust/rocket/src/: main.rs  router.rs  server.rs  state.rs
services/rust/rocket/src/api/: catchers.rs  errors.rs  mod.rs
services/rust/rocket/src/api/guard/: data.rs  mod.rs  request.rs
services/rust/rocket/src/api/handlers/: delete.rs  get.rs  patch.rs  post.rs  put.rs
services/rust/rocket/src/routes/: catchers.rs  errors.rs  extractors.rs  mod.rs  router.rs
services/rust/rocket/src/routes/fairings/: log.rs  mod.rs
services/rust/rocket/src/routes/guards/: chaos.rs  mod.rs
services/rust/rocket/src/routes/handlers/: delete.rs  get.rs  patch.rs  post.rs  put.rs
services/rust/salvo/: Cargo.toml  Dockerfile
services/rust/salvo/src/: main.rs  router.rs  server.rs
services/rust/salvo/src/api/: errors.rs
services/rust/salvo/src/api/handlers/: delete.rs  get.rs  mod.rs  patch.rs  post.rs  put.rs
services/rust/salvo/src/api/middleware/: mod.rs  validate_request.rs
services/rust/salvo/src/routes/: errors.rs  extractors.rs  mod.rs  router.rs
services/rust/salvo/src/routes/handlers/: delete.rs  get.rs  invalid_method.rs  invalid_path.rs  mod.rs  patch.rs  post.rs  put.rs
services/rust/salvo/src/routes/middleware/: chaos.rs  log.rs
services/rust/warp/: Cargo.toml  Dockerfile
services/rust/warp/src/: main.rs  router.rs  server.rs  task.rs
services/rust/warp/src/api/: errors.rs  mod.rs
services/rust/warp/src/api/filters/: mod.rs  validate_request.rs
services/rust/warp/src/routes/: errors.rs  mod.rs  router.rs
shared-code/python/telemetry/: pyproject.toml
shared-code/python/telemetry/src/telemetry/: logger.py  profiler.py  telemetry.py
shared-code/rust-telemetry/: Cargo.toml
shared-code/rust-telemetry/src/: lib.rs
(+373 files in other folders)
