[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
opentelemetry = "0.32.0"
opentelemetry-appender-tracing = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = "0.32.1"
pyroscope = { version = "2.0.6", features = ["backend-pprof-rs"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }

[profile.release]
debug = 1