[package]
name = "generator"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
opentelemetry = "0.32.0"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
telemetry.path = "../shared-code/rust/telemetry"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
debug = 1
