[package]
name = "axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros"] }
dotenvy = "0.15.7"
eyre = "0.6.12"
opentelemetry = "0.32.0"
opentelemetry-http = "0.32.0"
rust-telemetry.path = "../../shared-code/rust-telemetry"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-opentelemetry = "0.33.0"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[profile.release]
debug = 1
