[project]
name = "mydjango"
version = "0.1.0"
requires-python = "==3.12.3"
dependencies = [
    "app",
    "telemetry",
    "django==6.0.6",
    "uvicorn==0.50.0",
]

[dependency-groups]
dev = [
    "django-stubs==6.0.6",
]

[tool.uv.sources]
app = { path = "../../../shared-code/python/app" }
telemetry = { path = "../../../shared-code/python/telemetry" }

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"
project-includes = ["src"]
search-path = ["src"]
