[project]
name = "myflask"
version = "0.1.0"
requires-python = "==3.12.3"
dependencies = [
    "app",
    "flask==3.1.3",
    "pydantic==2.13.4",
    "structlog==26.1.0",
    "gunicorn[gevent]==26.0.0",
]

[tool.uv.sources]
app = { path = "../../../shared-code/python/app" }

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"
project-includes = ["src"]
