[package]
name = "actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.14.0", default-features = false, features = ["macros"] }
app.path = "../../../shared-code/rust/app"
eyre = "0.6.12"
rand = "0.10.1"
telemetry.path = "../../../shared-code/rust/telemetry"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[profile.release]
debug = 1
