[package]
name = "rocket"
version = "0.1.0"
edition = "2024"

[dependencies]
app.path = "../../../shared-code/rust/app"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
eyre = "0.6.12"
rand = "0.10.1"
telemetry.path = "../../../shared-code/rust/telemetry"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
debug = 1