[package]
name = "salvo"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.93.0", features = ["affix-state"] }
eyre = "0.6.12"
rust-telemetry.path = "../../../shared-code/rust-telemetry"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[profile.release]
debug = 1
