[package]
name = "warp"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = { version = "0.4.3", features = ["server"] }
eyre = "0.6.12"
rand = "0.10.1"
rust-telemetry.path = "../../../shared-code/rust-telemetry"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
uuid = { version = "1.23.1", features = ["v4"] }

[profile.release]
debug = 1