[project]
name = "telemetry"
version = "0.1.0"
requires-python = "==3.12.3"
dependencies = [
    "opentelemetry-exporter-otlp-proto-http==1.43.0",
    "pyroscope-io>=1.0.12",
    "structlog==26.1.0",
]

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python"
project-includes = ["src"]

[build-system]
requires = ["uv_build==0.11.18"]
build-backend = "uv_build"
